--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </label>
         <button id=play-button>PLAY!</button>
         <div>Game Results:
-            <span id="results"></span>
+            <span id="current-results"></span>
             <div id="computer-results"></div>
             <div> Number of Wins:
                 <span id="number-of-wins"></span>
