functional. all displays work

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         </ol>
         </p>
         <label> ROCK
-            <input type="radio" , name="rps" ,value="Rock" />
+            <input type="radio" name="rps" value="Rock" />
         </label>
         <label> PAPER
-            <input type="radio" , name="rps" ,value="Paper" />
+            <input type="radio" name="rps" value="Paper" />
         </label>
         <label> SCISSORS
-            <input type="radio" , name="rps" ,value="Scissors" />
+            <input type="radio" name="rps" value="Scissors" />
         </label>
         <button id=play-button>PLAY!</button>
         <div>Game Results:
