--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <input type="radio" name="rps" value="Scissors" />
         </label>
         <button id=play-button>PLAY!</button>
-        <div>Game Results:
+        <div class="results-section">Game Results:
             <span id="current-results"></span>
             <div id="computer-results"></div>
             <div> Number of Wins:
